# FlagApp

./: .agentignore  .gitignore  .gitmessage  AGENTS.md  CLAUDE.md  README.md
backend/: .env.example  Makefile  README.md  pyproject.toml
backend/config/: settings.py  urls.py
backend/flags/: models.py  tests.py  urls.py  views.py
backend/flags/data/: __init__.py  country_alternates.py
backend/flags/management/commands/: load_countries.py
backend/flags/migrations/: 0001_initial.py  0002_initial.py  0003_difficultytierstate_tiershowncountry.py
backend/flags/serializers/: __init__.py  challenge_serializers.py  country_serializers.py  daily_challenge_serializers.py  question_serializers.py
backend/flags/tests/: __init__.py  test_commands.py  test_daily_challenge.py  test_models.py  test_serializers.py
backend/users/: models.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/serializers/: __init__.py  user_serializers.py
backend/users/tests/: __init__.py  test_auth.py  test_models.py
docs/: Backend_Development_Workflow.md  Backend_PostgreSQL_Reference.md  Backend_Technical_Design_Main.md  NorthStarV1.md  North_Star_V1.md  ROADMAP.md  notes.md
frontend/: .env.example  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/animations/: variants.ts
frontend/src/api/: auth.ts  challenge.ts  client.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/screens/: DailyChallengeScreen.tsx  LoginScreen.tsx  ResultsScreen.tsx
frontend/src/stores/: authStore.ts  challengeStore.ts
(+18 files in other folders)
